tests/react_dom/react_dom.exp
Error ----------------------------------------------------------------------------------- dangerouslySetInnerHTML.js:5:1

Cannot create `article` element because boolean [1] is incompatible with object type [2] in property
`dangerouslySetInnerHTML`.

   dangerouslySetInnerHTML.js:5:1
     5| <article dangerouslySetInnerHTML />; // Error: Expected object
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   dangerouslySetInnerHTML.js:5:10
     5| <article dangerouslySetInnerHTML />; // Error: Expected object
                 ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:578:29
   578|   dangerouslySetInnerHTML?: { __html: string },
                                    ^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- dangerouslySetInnerHTML.js:6:1

Cannot create `article` element because string [1] is incompatible with object type [2] in property
`dangerouslySetInnerHTML`.

   dangerouslySetInnerHTML.js:6:1
     6| <article dangerouslySetInnerHTML="<blink>Hello</blink>" />; // Error: Expected object
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   dangerouslySetInnerHTML.js:6:34
     6| <article dangerouslySetInnerHTML="<blink>Hello</blink>" />; // Error: Expected object
                                         ^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:578:29
   578|   dangerouslySetInnerHTML?: { __html: string },
                                    ^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- dangerouslySetInnerHTML.js:8:1

Cannot create `article` element because property `__html` is missing in object literal [1] but exists in object type [2]
in property `dangerouslySetInnerHTML`.

   dangerouslySetInnerHTML.js:8:1
     8| <article dangerouslySetInnerHTML={{ html: "<blink>Hello</blink>" }} />; // Error: Missing __html
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   dangerouslySetInnerHTML.js:8:35
     8| <article dangerouslySetInnerHTML={{ html: "<blink>Hello</blink>" }} />; // Error: Missing __html
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:578:29
   578|   dangerouslySetInnerHTML?: { __html: string },
                                    ^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- events.js:6:1

Cannot create `input` element because string [1] is incompatible with function type [2] in property `onChange`.

   events.js:6:1
     6| <input onChange="foo" />; // Error: Expected function
        ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   events.js:6:17
     6| <input onChange="foo" />; // Error: Expected function
                        ^^^^^ [1]
   <BUILTINS>/react-dom.js:427:14
   427|   onChange?: (SyntheticEvent<E>) => void,
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- events.js:8:1

Cannot create `textarea` element because `SyntheticKeyboardEvent` [1] is incompatible with `SyntheticMouseEvent` [2] in
the first argument of property `onKeyDown`.

   events.js:8:1
     8| <textarea onKeyDown={(event: SyntheticMouseEvent<HTMLElement>) => {}} />; // Error: Wrong event type
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react-dom.js:481:16
   481|   onKeyDown?: (SyntheticKeyboardEvent<E>) => void,
                       ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   events.js:8:30
     8| <textarea onKeyDown={(event: SyntheticMouseEvent<HTMLElement>) => {}} />; // Error: Wrong event type
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- events.js:18:29

Cannot assign `event.buttons` to `buttons` because number [1] is incompatible with string [2].

   events.js:18:29
    18|     const buttons: string = event.buttons; // Error: number ~> string
                                    ^^^^^^^^^^^^^

References:
   <BUILTINS>/react-dom.js:198:12
   198|   buttons: number;
                   ^^^^^^ [1]
   events.js:18:20
    18|     const buttons: string = event.buttons; // Error: number ~> string
                           ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- props_boolean.js:7:1

Cannot create `span` element because in property `hidden`:
 - Either null [1] is incompatible with empty string [2].
 - Or null [1] is incompatible with string literal `hidden` [3].
 - Or null [1] is incompatible with boolean [4].

   props_boolean.js:7:1
     7| <span hidden={null} />; // Error: Expected DOM boolean
        ^^^^^^^^^^^^^^^^^^^^^^

References:
   props_boolean.js:7:15
     7| <span hidden={null} />; // Error: Expected DOM boolean
                      ^^^^ [1]
   <BUILTINS>/react-dom.js:641:5
   641|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:642:5
   642|   | $TODO$CaseInsensitive<AttributeName>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:643:5
   643|   | boolean;
            ^^^^^^^ [4]


Error --------------------------------------------------------------------------------------------- props_boolean.js:8:1

Cannot create `span` element because in property `hidden`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with string literal `hidden` [3].
 - Or string [1] is incompatible with boolean [4].

   props_boolean.js:8:1
     8| <span hidden="true" />; // Error: Expected DOM boolean
        ^^^^^^^^^^^^^^^^^^^^^^

References:
   props_boolean.js:8:14
     8| <span hidden="true" />; // Error: Expected DOM boolean
                     ^^^^^^ [1]
   <BUILTINS>/react-dom.js:641:5
   641|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:642:5
   642|   | $TODO$CaseInsensitive<AttributeName>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:643:5
   643|   | boolean;
            ^^^^^^^ [4]


Error --------------------------------------------------------------------------------------------- props_boolean.js:9:1

Cannot create `span` element because in property `hidden`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with string literal `hidden` [3].
 - Or string [1] is incompatible with boolean [4].

   props_boolean.js:9:1
     9| <span hidden="false" />; // Error: Expected DOM boolean
        ^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_boolean.js:9:14
     9| <span hidden="false" />; // Error: Expected DOM boolean
                     ^^^^^^^ [1]
   <BUILTINS>/react-dom.js:641:5
   641|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:642:5
   642|   | $TODO$CaseInsensitive<AttributeName>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:643:5
   643|   | boolean;
            ^^^^^^^ [4]


Error -------------------------------------------------------------------------------------------- props_boolean.js:11:1

Cannot create `span` element because in property `hidden`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with string literal `hidden` [3].
 - Or string [1] is incompatible with boolean [4].

   props_boolean.js:11:1
    11| <span hidden="yes" />; // Error: Expected DOM boolean
        ^^^^^^^^^^^^^^^^^^^^^

References:
   props_boolean.js:11:14
    11| <span hidden="yes" />; // Error: Expected DOM boolean
                     ^^^^^ [1]
   <BUILTINS>/react-dom.js:641:5
   641|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:642:5
   642|   | $TODO$CaseInsensitive<AttributeName>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:643:5
   643|   | boolean;
            ^^^^^^^ [4]


Error -------------------------------------------------------------------------------------------- props_boolean.js:15:1

Cannot create `span` element because in property `hidden`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with string literal `hidden` [3].
 - Or string [1] is incompatible with boolean [4].

   props_boolean.js:15:1
    15| <span hidden="Hidden" />; // Currently an error
        ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_boolean.js:15:14
    15| <span hidden="Hidden" />; // Currently an error
                     ^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:641:5
   641|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:642:5
   642|   | $TODO$CaseInsensitive<AttributeName>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:643:5
   643|   | boolean;
            ^^^^^^^ [4]


Error ----------------------------------------------------------------------------------- props_booleanish_string.js:7:1

Cannot create `div` element because in property `contentEditable`:
 - Either null [1] is incompatible with empty string [2].
 - Or null [1] is incompatible with enum [3].
 - Or null [1] is incompatible with boolean [4].

   props_booleanish_string.js:7:1
     7| <div contentEditable={null} />; // Error: Expected booleanish string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_booleanish_string.js:7:23
     7| <div contentEditable={null} />; // Error: Expected booleanish string
                              ^^^^ [1]
   <BUILTINS>/react-dom.js:636:5
   636|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:637:5
   637|   | $TODO$CaseInsensitive<"true" | "false">
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:638:5
   638|   | boolean;
            ^^^^^^^ [4]


Error ---------------------------------------------------------------------------------- props_booleanish_string.js:11:1

Cannot create `div` element because in property `contentEditable`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with enum [3].
 - Or string [1] is incompatible with boolean [4].

   props_booleanish_string.js:11:1
    11| <div contentEditable="yes" />; // Error: Expected booleanish string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_booleanish_string.js:11:22
    11| <div contentEditable="yes" />; // Error: Expected booleanish string
                             ^^^^^ [1]
   <BUILTINS>/react-dom.js:636:5
   636|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:637:5
   637|   | $TODO$CaseInsensitive<"true" | "false">
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:638:5
   638|   | boolean;
            ^^^^^^^ [4]


Error ---------------------------------------------------------------------------------- props_booleanish_string.js:12:1

Cannot create `div` element because in property `contentEditable`:
 - Either string [1] is incompatible with empty string [2].
 - Or string [1] is incompatible with enum [3].
 - Or string [1] is incompatible with boolean [4].

   props_booleanish_string.js:12:1
    12| <div contentEditable="contentEditable" />; // Error: Expected booleanish string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_booleanish_string.js:12:22
    12| <div contentEditable="contentEditable" />; // Error: Expected booleanish string
                             ^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:636:5
   636|   | ""
            ^^ [2]
   <BUILTINS>/react-dom.js:637:5
   637|   | $TODO$CaseInsensitive<"true" | "false">
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:638:5
   638|   | boolean;
            ^^^^^^^ [4]


Error ------------------------------------------------------------------------------------------------ props_enum.js:5:1

Cannot create `header` element because boolean [1] is incompatible with enum [2] in property `dir`.

   props_enum.js:5:1
     5| <header dir />; // Error: Expected enum
        ^^^^^^^^^^^^^^

References:
   props_enum.js:5:9
     5| <header dir />; // Error: Expected enum
                ^^^ [1]
   <BUILTINS>/react-dom.js:602:9
   602|   dir?: $TODO$CaseInsensitive<"ltr" | "rtl" | "LTR" | "RTL" | "auto">,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- props_enum.js:11:1

Cannot create `header` element because string [1] is incompatible with enum [2] in property `dir`.

   props_enum.js:11:1
    11| <header dir="Ltr" />; // currently an error
        ^^^^^^^^^^^^^^^^^^^^

References:
   props_enum.js:11:13
    11| <header dir="Ltr" />; // currently an error
                    ^^^^^ [1]
   <BUILTINS>/react-dom.js:602:9
   602|   dir?: $TODO$CaseInsensitive<"ltr" | "rtl" | "LTR" | "RTL" | "auto">,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- props_number.js:5:1

Cannot create `h1` element because boolean [1] is incompatible with number [2] in property `tabIndex`.

   props_number.js:5:1
     5| <h1 tabIndex />; // Error: Expected number
        ^^^^^^^^^^^^^^^

References:
   props_number.js:5:5
     5| <h1 tabIndex />; // Error: Expected number
            ^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:583:14
   583|   tabIndex?: ReactDOM$Number,
                     ^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- props_number.js:10:1

Cannot create `h1` element because string [1] is incompatible with number [2] in property `tabIndex`.

   props_number.js:10:1
    10| <h1 tabIndex="foo" />; // Error: Expected number
        ^^^^^^^^^^^^^^^^^^^^^

References:
   props_number.js:10:14
    10| <h1 tabIndex="foo" />; // Error: Expected number
                     ^^^^^ [1]
   <BUILTINS>/react-dom.js:583:14
   583|   tabIndex?: ReactDOM$Number,
                     ^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- props_number.js:11:1

Cannot create `h1` element because string [1] is incompatible with number [2] in property `tabIndex`.

   props_number.js:11:1
    11| <h1 tabIndex="1" />; // Error: Expected number
        ^^^^^^^^^^^^^^^^^^^

References:
   props_number.js:11:14
    11| <h1 tabIndex="1" />; // Error: Expected number
                     ^^^ [1]
   <BUILTINS>/react-dom.js:583:14
   583|   tabIndex?: ReactDOM$Number,
                     ^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- props_string.js:6:1

Cannot create `html` element because number [1] is incompatible with string [2] in property `id`.

   props_string.js:6:1
     6| <html id={42} />; // Error: Expected string
        ^^^^^^^^^^^^^^^^

References:
   props_string.js:6:11
     6| <html id={42} />; // Error: Expected string
                  ^^ [1]
   <BUILTINS>/react-dom.js:579:8
   579|   id?: string,
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- props_style.js:6:1

Cannot create `footer` element because string [1] is incompatible with `ReactDOM$Style` [2] in property `style`.

   props_style.js:6:1
     6| <footer style="margin-right: 1em;" />; // Error: Expected object
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   props_style.js:6:15
     6| <footer style="margin-right: 1em;" />; // Error: Expected object
                      ^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:581:11
   581|   style?: ReactDOM$Style,
                  ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- suppress_warnings.js:6:1

Cannot create `p` element because string [1] is incompatible with boolean [2] in property `suppressHydrationWarning`.

   suppress_warnings.js:6:1
     6| <p suppressHydrationWarning="false" />; // Error: Expected boolean
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   suppress_warnings.js:6:29
     6| <p suppressHydrationWarning="false" />; // Error: Expected boolean
                                    ^^^^^^^ [1]
   <BUILTINS>/react-dom.js:582:30
   582|   suppressHydrationWarning?: boolean,
                                     ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- suppress_warnings.js:10:1

Cannot create `aside` element because string [1] is incompatible with boolean [2] in property
`suppressContentEditableWarning`.

   suppress_warnings.js:10:1
    10| <aside contentEditable suppressContentEditableWarning="false" />; // Error: Expected boolean
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   suppress_warnings.js:10:55
    10| <aside contentEditable suppressContentEditableWarning="false" />; // Error: Expected boolean
                                                              ^^^^^^^ [1]
   <BUILTINS>/react-dom.js:612:36
   612|   suppressContentEditableWarning?: boolean,
                                           ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- void_element_tags.js:7:1

Cannot create `menuitem` element because object literal [1] is incompatible with undefined [2] in property
`dangerouslySetInnerHTML`.

   void_element_tags.js:7:1
     7| <menuitem dangerouslySetInnerHTML={{ __html: "Content" }} />; // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   void_element_tags.js:7:36
     7| <menuitem dangerouslySetInnerHTML={{ __html: "Content" }} />; // Error
                                           ^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:677:30
   677|   dangerouslySetInnerHTML?: ?void // innerHTML cannot be set on empty elements
                                     ^^^^ [2]


Error ----------------------------------------------------------------------------------------- void_element_tags.js:8:1

Cannot create `br` element because JSX text [1] is incompatible with undefined [2] in property `children`.

   void_element_tags.js:8:1
     8| <br>Content</br>; // Error
        ^^^^^^^^^^^^^^^^

References:
   void_element_tags.js:8:5
     8| <br>Content</br>; // Error
            ^^^^^^^ [1]
   <BUILTINS>/react-dom.js:676:15
   676|   children?: ?void, // Empty elements cannot have children
                      ^^^^ [2]



Found 25 errors
